<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cvItemCourse"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:cardCornerRadius="4dp"
    app:cardElevation="4dp"
    app:cardMaxElevation="4dp"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/itemContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imgPoster"
            android:layout_width="120dp"
            android:layout_height="200dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/movie_image"
            android:scaleType="centerCrop"
            android:src="@color/teal_200"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvItemTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:ellipsize="end"
            android:gravity="start"
            android:maxLines="2"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/imgPoster"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/movie_title" />

        <TextView
            android:id="@+id/tvItemDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@id/tvItemTitle"
            app:layout_constraintTop_toBottomOf="@id/tvItemTitle"
            tools:text="@string/movie_year" />

        <TextView
            android:id="@+id/tvItemOverview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:ellipsize="end"
            android:gravity="start"
            android:maxLines="7"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/tvItemDate"
            app:layout_constraintTop_toBottomOf="@id/tvItemDate"
            tools:text="@string/movie_overview" />

        <TextView
            android:id="@+id/tvItemId"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/tvItemOverview"
            app:layout_constraintTop_toBottomOf="@id/tvItemOverview"
            tools:text="@string/movie_title" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>